@@ -4,6 +4,8 @@ CHANGES.txt - 2009-01-13
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The web interface no longer uses multi-part output with old or broken
+	  web browsers (STR #3049)
 	- CUPS now conforms to the draft IPP/2.0 and IPP/2.1 specification.
 	- Added a new cupsGetConflicts() API to get a list of conflicting
 	  options.
